# tiEng

./: .gitignore  CMakeLists.txt  README.md  build.ps1  imgui.ini  launch.ps1  setup.ps1  test.ps1  ui_dev.ps1
Backend/: CMakeLists.txt  Engine.cpp
Bridge/: Bridge.cpp  CMakeLists.txt
Frontend/: CMakeLists.txt  Main.cpp  SandboxMain.cpp  WindowSetup.h  imgui_docking_internal.h
Frontend/UI/: UILayouts.h
Frontend/UI/Components/: DebugPanel.h  Inspector.h
Frontend/UI/Core/: Common.h  IconsFontAwesome6.h
Shared/: CMakeLists.txt
