project(Bridge)
file(GLOB_RECURSE SOURCES "*.cpp" "*.h" "*.hpp")
add_library(Bridge SHARED ${SOURCES})
target_include_directories(Bridge PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/Vendor/httplib)
target_link_libraries(Bridge PUBLIC Shared Backend)
if(WIN32)
    target_link_libraries(Bridge PUBLIC ws2_32 crypt32)
    target_compile_definitions(Bridge PRIVATE BRIDGE_EXPORTS)
endif()
target_compile_features(Bridge PUBLIC cxx_std_23)
